--- a/templates/signup.html
+++ b/templates/signup.html
@@ -26,7 +26,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6 bg-white p-5 rounded shadow-sm">
                 <h2 class="text-center mb-4">Sign Up</h2>
-                <form method="POST" action="/signup">
+                <form id="signup-form">
                     <div class="mb-3">
                         <label for="first_name" class="form-label">First Name</label>
                         <input type="text" class="form-control" name="first_name" required>
