--- a/templates/signup.html
+++ b/templates/signup.html
@@ -28,27 +28,27 @@
                 <h2 class="text-center mb-4">Sign Up</h2>
                 <form id="signup-form">
                     <div class="mb-3">
-                        <label for="first_name" class="form-label">First Name</label>
+                        <label for="first_name" class="form-label">First Name *</label>
                         <input type="text" class="form-control" name="first_name" required>
                     </div>
                     <div class="mb-3">
-                        <label for="last_name" class="form-label">Last Name</label>
+                        <label for="last_name" class="form-label">Last Name *</label>
                         <input type="text" class="form-control" name="last_name" required>
                     </div>
                     <div class="mb-3">
-                        <label for="username" class="form-label">Username</label>
+                        <label for="username" class="form-label">Username *</label>
                         <input type="text" class="form-control" name="username" required>
                     </div>
                     <div class="mb-3">
-                        <label for="phone_number" class="form-label">Phone Number</label>
+                        <label for="phone_number" class="form-label">Phone Number *</label>
                         <input type="text" class="form-control" name="phone_number" placeholder="+12482523456" required>
                     </div>
                     <div class="mb-3">
-                        <label for="zip_code" class="form-label">ZIP Code</label>
+                        <label for="zip_code" class="form-label">ZIP Code *</label>
                         <input type="text" class="form-control" name="zip_code" required>
                     </div>
                     <div class="mb-3">
-                        <label for="password" class="form-label">Password</label>
+                        <label for="password" class="form-label">Password *</label>
                         <input type="password" class="form-control" name="password" required>
                     </div>
                     <button type="submit" class="btn btn-signal w-100">Create Account</button>
