Added initial report page

--- a/templates/home.html
+++ b/templates/home.html
@@ -63,6 +63,12 @@
             </div>
         </div>
 
+        <div class="text-center mt-4">
+            <a href="/report" class="btn btn-signal px-5 py-3 fs-5 shadow-sm">
+                ➕ Report an Incident
+            </a>
+        </div>
+
         <div id="map"></div>
     </div>
 
@@ -86,9 +92,9 @@
         }
     </script>
 
-    <!-- Replace with your actual Google Maps API key -->
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7SIlZRGVZjnkLOtG4nZ88iFhupp8PQw0&callback=initMap">
-    </script>
+    <script async
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7SIlZRGVZjnkLOtG4nZ88iFhupp8PQw0&callback=initMap">
+        </script>
 </body>
 
 </html>
