Redirect users to home page after logging in and clean up of imports

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -84,6 +84,7 @@
             const result = await res.json();
             if (res.ok) {
                 alert(result.message || 'Account created!');
+                window.location.href = '/';
             } else {
                 alert(result.error || 'Something went wrong.');
             }
