Add ICE for alert types and added ZipCodes table and now storing county_name with user entry

--- a/templates/report.html
+++ b/templates/report.html
@@ -39,6 +39,7 @@
           <option value="">Select one</option>
           <option value="suspicious">Suspicious Activity</option>
           <option value="emergency">Emergency</option>
+          <option value="ice">ICE</option>
           <option value="disturbance">Disturbance</option>
           <option value="other">Other</option>
         </select>
