Add button for users who have an account already

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -52,6 +52,11 @@
                         <input type="password" class="form-control" name="password" required>
                     </div>
                     <button type="submit" class="btn btn-signal w-100">Create Account</button>
+
+                    <div class="text-center mt-3">
+                        <p>Already have an account?</p>
+                        <a href="/login" class="btn btn-outline-secondary w-100">Log In</a>
+                    </div>
                 </form>
             </div>
         </div>
@@ -91,4 +96,5 @@
         });
     </script>
 </body>
+
 </html>
