--- a/templates/login.html
+++ b/templates/login.html
@@ -37,6 +37,11 @@
                     </div>
                     <button type="submit" class="btn btn-signal w-100">Login</button>
                 </form>
+
+                <div class="text-center mt-3">
+                    <p>Don't have an account?</p>
+                    <a href="/signup" class="btn btn-outline-primary w-100">Sign Up</a>
+                </div>
             </div>
         </div>
     </div>
@@ -71,4 +76,5 @@
         });
     </script>
 </body>
+
 </html>
