Handle when some locations don't have a zip code (use reverse geocoding)

--- a/templates/home.html
+++ b/templates/home.html
@@ -135,7 +135,7 @@
     </script>
 
     <script async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7SIlZRGVZjnkLOtG4nZ88iFhupp8PQw0&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key={{ google_api_key }}&callback=initMap">
         </script>
 
     <div class="mt-5">
